{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 15,
  "lineage": "20f165ba-86e3-6ca0-5a1f-444658bffca9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05805bdd7ba422207",
            "arn": "arn:aws:ec2:us-east-1:096093618431:elastic-ip/eipalloc-05805bdd7ba422207",
            "domain": "vpc",
            "id": "eipalloc-05805bdd7ba422207",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-21-163-118.compute-1.amazonaws.com",
            "public_ip": "52.21.163.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sentinelgraph-nat-eip"
            },
            "tags_all": {
              "Name": "sentinelgraph-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:internet-gateway/igw-07938e1fb77d5849d",
            "id": "igw-07938e1fb77d5849d",
            "owner_id": "096093618431",
            "tags": {
              "Name": "sentinelgraph-igw"
            },
            "tags_all": {
              "Name": "sentinelgraph-igw"
            },
            "vpc_id": "vpc-09f2b37499e56ae3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05805bdd7ba422207",
            "association_id": "eipassoc-0f6b35f9abbb3a910",
            "connectivity_type": "public",
            "id": "nat-09206ce856b0da476",
            "network_interface_id": "eni-0174f5cca1b638dc5",
            "private_ip": "10.0.0.39",
            "public_ip": "52.21.163.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e6c3e14d88493dd",
            "tags": {
              "Name": "sentinelgraph-nat"
            },
            "tags_all": {
              "Name": "sentinelgraph-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:route-table/rtb-043540db46b6dde9a",
            "id": "rtb-043540db46b6dde9a",
            "owner_id": "096093618431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09206ce856b0da476",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sentinelgraph-private-rt"
            },
            "tags_all": {
              "Name": "sentinelgraph-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2b37499e56ae3b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:route-table/rtb-0502846e62b62cbed",
            "id": "rtb-0502846e62b62cbed",
            "owner_id": "096093618431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07938e1fb77d5849d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sentinelgraph-public-rt"
            },
            "tags_all": {
              "Name": "sentinelgraph-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2b37499e56ae3b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8a4f59acc8a7ea6",
            "route_table_id": "rtb-043540db46b6dde9a",
            "subnet_id": "subnet-0b6e677a2272d3f1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f29f9c4537b01aa8",
            "route_table_id": "rtb-043540db46b6dde9a",
            "subnet_id": "subnet-047373719e9090449"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07320a1958d4ea7cb",
            "route_table_id": "rtb-0502846e62b62cbed",
            "subnet_id": "subnet-06e6c3e14d88493dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06947088c51e25a2c",
            "route_table_id": "rtb-0502846e62b62cbed",
            "subnet_id": "subnet-02a4f975690466ba8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:subnet/subnet-0b6e677a2272d3f1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6e677a2272d3f1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096093618431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentinelgraph-private-0",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sentinelgraph-private-0",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09f2b37499e56ae3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:subnet/subnet-047373719e9090449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047373719e9090449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096093618431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentinelgraph-private-1",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sentinelgraph-private-1",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09f2b37499e56ae3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:subnet/subnet-06e6c3e14d88493dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e6c3e14d88493dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "096093618431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentinelgraph-public-0",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sentinelgraph-public-0",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f2b37499e56ae3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:subnet/subnet-02a4f975690466ba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a4f975690466ba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "096093618431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sentinelgraph-public-1",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sentinelgraph-public-1",
              "kubernetes.io/cluster/sentinelgraph": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f2b37499e56ae3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096093618431:vpc/vpc-09f2b37499e56ae3b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c626620806392f1",
            "default_route_table_id": "rtb-081301ade771552a3",
            "default_security_group_id": "sg-0b76a9236c12adeb7",
            "dhcp_options_id": "dopt-714c5b0a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f2b37499e56ae3b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081301ade771552a3",
            "owner_id": "096093618431",
            "tags": {
              "Name": "sentinelgraph-vpc"
            },
            "tags_all": {
              "Name": "sentinelgraph-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}